--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
-.container{
-    display: inline-block;
-}
-
-#video{
-    width: 640px;
-    height: 480px;
-    /* border: 2px solid red; */
-    /* background-color: black; */
-    float: left;
-}
-#canvas{
-    width: 640px;
-    height: 480px;
-    /* float: right; */
-    border: 2px solid red;
-    /* display: inline-block; */
+body{
+    background-color: aqua;
 }
 
 
-.opencamera{
-    margin-top: 5px;
-    margin-left: 600px;
+.selections{
+     margin-top: 20%;
+     margin-left: 30%;
+}
+
+
+
+a{
+    text-decoration: none;
+    color: white;
+    background-color: green;
+    cursor: pointer;
+    border: 2px solid green;
+    height: 500px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    margin-left: 10px;
 }
